fixes aside issue

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </section>
 
             <aside class="benefits">
-                <asides class="aside-benefit">
+                <aside class="aside-benefit">
                     <h3>Lead Generation</h3>
                     <img class="logo-aside" src="./assets/images/lead-generation.png" title="Lead Generation" alt="Lead Generation"/>
                     <p>
