--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <article>  
             <section class="content">
 <!-- /* Instead of having 3 different class for the images section, I consolidated them into class="contents block" in doing so, I was able to improve efficiency of the styling. */ -->
-                <section class="Contents-block">
+                <section class="Contents-block" id="search-engine-optimization">
                     <img class="float-left" src="./assets/images/search-engine-optimization.jpg" title="Search Engine Optimization" alt="Search engine Optimization" />
                     <h2>Search Engine Optimization</h2>
                     <p>
@@ -42,7 +42,7 @@
                     </p>
                 </section>
 
-                <section class="Contents-block">
+                <section class="Contents-block" id="online-reputation-management">
 <!-- removed error for duplicate class and ID,  Apply only id "float-right" for easy styling -->
                     <img id="float-right" src="./assets/images/online-reputation-management.jpg" title="Online Reputation Management" alt="online Repuation Management" />
                     <h2>Online Reputation Management</h2>
@@ -51,7 +51,7 @@
                     </p>
                 </section>
 
-                <section class="Contents-block">
+                <section class="Contents-block" id="social-media-marketing">
                     <img class="float-left" src="./assets/images/social-media-marketing.jpg" title="Social Media Marketing" alt="Social Media Marketing"/>
                     <h2>Social Media Marketing</h2>
                     <p>
